# min-repro-pylance

./: README.md  foolib.py  footypes.py  main.py  main2.py  pyproject.toml
foolib/core/: impl.py
